--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="phishing-popup">
       <div class="phishing-popup__content">
         <div class="phishing-popup__main">
-          <img src="./assets/images/other/phishing-warning-bunny.png" />
+          <img src="./assets/images/body-image/phishing-warning-bunny.png" />
           <div class="phishing-popup__text">
             <p>
               <span class="phishing-popup__text--orange"
@@ -42,7 +42,246 @@
       </div>
     </div>
     <nav></nav>
-    <div class="hero-section"></div>
+    <div class="hero-section">
+      <div class="hero-section__carousel-container">
+        <div class="carousel">
+          <div class="carousel__domains carousel__item">
+            <div class="carousel__left">
+              <div class="carousel__text">
+                <span class="carousel__logo-img carousel__logo-img--usn">
+                  <img src="./assets/images/body-image/usnTitle.png" />
+                </span>
+                <div
+                  class="carousel__gradient-text carousel__gradient-text--orange"
+                >
+                  Get your custom branded subdomains .pancake.crypto for just
+                  $9.99
+                </div>
+                <div class="carousel__links">
+                  <a href="#">Get your domain</a>
+                  <div class="carousel__separator-line"></div>
+                  <a href="#">Learn More </a>
+                </div>
+              </div>
+            </div>
+            <span class="carousel__right-image carousel__right-image--usn">
+              <img
+                src="./assets/images/body-image/usnBunny.png"
+                alt="usn bunny"
+              />
+            </span>
+            <span class="carousel__right-usn-logo">
+              <img
+                src="./assets/images/body-image/usnLogo.png"
+                alt="usn logo"
+              />
+            </span>
+            <span class="carousel__right-star carousel__right-star--big">
+              <img
+                src="./assets/images/body-image/liquidStakingBunnyBg3.png"
+                alt="star"
+              />
+            </span>
+            <span class="carousel__right-star carousel__right-star--sm">
+              <img
+                src="./assets/images/body-image/liquidStakingBunnyBg3.png"
+                alt="star"
+              />
+            </span>
+            <span class="carousel__blue-ball"></span>
+          </div>
+          <div class="carousel__protector carousel__item">
+            <div class="carousel__bg">
+              <img
+                class="carousel__bg-image"
+                src="./assets/images/body-image/pancakeProtectorBg.png"
+                alt="pancake protector"
+              />
+            </div>
+            <div class="carousel__left">
+              <div class="carousel__text">
+                <span class="carousel__logo-img">
+                  <img src="./assets/images/body-image/ethXpancakeswap.png" />
+                </span>
+                <div class="carousel__gradient-text">
+                  Join Pancake Protectors
+                </div>
+                <div
+                  class="carousel__gradient-text carousel__gradient-text--small"
+                >
+                  Exclusive Perks for PancakeSwap Bunnies and Squads
+                </div>
+                <div class="carousel__links">
+                  <a href="#">Details</a>
+                  <div class="carousel__separator-line"></div>
+                  <a href="#"
+                    >Play Now
+                    <svg
+                      viewBox="0 0 24 24"
+                      color="white"
+                      width="20px"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="sc-231a1e38-0 iDcbEw"
+                    >
+                      <path
+                        d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <span
+              class="carousel__right-image carousel__right-image--protector"
+            >
+              <img src="./assets/images/body-image/pancakeProtectorBunny.png" />
+            </span>
+          </div>
+          <div class="carousel__trade carousel__item--selected">
+            <div class="carousel__left">
+              <div class="carousel__text">
+                <p class="carousel__trade-text carousel__trade-text--sm">
+                  Trade to Earn Rewards
+                </p>
+                <p class="carousel__trade-text carousel__trade-text--big">
+                  5% trading rebate to be earned!
+                </p>
+                <div class="carousel__links carousel__links--trade">
+                  <a href="#"
+                    >Trade Now
+                    <svg
+                      viewBox="0 0 24 24"
+                      color="white"
+                      width="20px"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="sc-231a1e38-0 iDcbEw"
+                    >
+                      <path
+                        d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
+                      ></path>
+                    </svg>
+                  </a>
+                  <a href="#"
+                    >Learn More
+                    <svg
+                      viewBox="0 0 24 24"
+                      color="primary"
+                      width="20px"
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="sc-231a1e38-0 dTViYw"
+                    >
+                      <path
+                        d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                      ></path>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <span class="carousel__right-image carousel__right-image--usn">
+              <img
+                src="./assets/images/body-image/usnBunny.png"
+                alt="usn bunny"
+              />
+            </span>
+          </div>
+          <!-- da cambiare nome -->
+          <div class="carousel__item"></div>
+          <!-- da cambiare nome -->
+          <div class="carousel__item"></div>
+          <!-- da cambiare nome -->
+          <div class="carousel__item"></div>
+          <!-- da cambiare nome -->
+          <div class="carousel__item"></div>
+          <!-- da cambiare nome -->
+          <div class="carousel__item"></div>
+          <!-- da cambiare nome -->
+          <div class="carousel__nav">
+            <button class="carousel__button carousel__button--active"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+            <button class="carousel__button"></button>
+          </div>
+        </div>
+      </div>
+      <div class="hero-section__cta">
+        <div class="hero-section__left">
+          <h1>The moon is made of pancakes.</h1>
+          <p>
+            Trade, earn, and win crypto on the most popular decentralized
+            platform in the galaxy.
+          </p>
+          <div class="hero-section__buttons">
+            <button>Connect Wallet</button>
+            <a href="#">Trade Now</a>
+          </div>
+        </div>
+        <div class="hero-section__right">
+          <div class="hero-section__images-container">
+            <div class="hero-section__main-image">
+              <img
+                src="./assets/images/body-image/astronaut-bunny.png"
+                alt="astronaut-bunny"
+              />
+            </div>
+            <div class="hero-section__star-left-image">
+              <img
+                src="./assets/images/body-image/star-left.png"
+                alt="star left"
+              />
+            </div>
+            <div class="hero-section__star-right-image">
+              <img
+                src="./assets/images/body-image/star-right.png"
+                alt="star right"
+              />
+            </div>
+            <div class="hero-section__star-top-image">
+              <img
+                src="./assets/images/body-image/star-top.png"
+                alt="star top"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-section__image-curve--light">
+        <svg
+          viewBox="0 0 1660 339"
+          class="sc-231a1e38-0 dPwWVs slide-svg-light"
+          width="100%"
+          color="text"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M804 167.023C520.5 167.023 267.5 290.522 0 304.5V339H1660V0.5C1358.83 0.5 1104 167.023 804 167.023Z"
+            fill="url(#paint0_linear_light)"
+          ></path>
+          <defs>
+            <linearGradient
+              id="paint0_linear_light"
+              x1="830"
+              y1="84"
+              x2="830"
+              y2="339"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="white" stop-opacity="0.48"></stop>
+              <stop
+                offset="0.566389"
+                stop-color="white"
+                stop-opacity="0.35"
+              ></stop>
+              <stop offset="1" stop-color="white"></stop>
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+    </div>
     <div class="section-2"></div>
     <div class="section-3"></div>
     <div class="section-4"></div>
