feat:completed sixth section homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,142 @@
     <div class="section-3"></div>
     <div class="section-4"></div>
     <div class="section-5"></div>
-    <div class="section-6"></div>
+    <div class="section-6">
+      <div class="first__container__section__six">
+        <div class="section__six__first__item">
+          <div class="section__six__first__item__title">
+            <h2 class="section__six__first__item__h2">
+              <span class="section__six__first__item--violet">CAKE</span>
+              makes our world go round.
+            </h2>
+          </div>
+
+          <div class="section__six__first__item__title__descr">
+            CAKE token is at the heart of the PancakeSwap ecosystem. Buy it, win
+            it, farm it, spend it, stake it... heck, you can even vote with it!
+          </div>
+
+          <div class="section__six__first__item__container__btn__and__link">
+            <button class="first__item__button">Buy CAKE</button>
+            <div class="section__six__first__item__container__btn__and__link__cont-link-svg">
+            <span> <a href="#" class="first__item__span">Learn</a></span>
+            <svg
+              viewBox="0 0 24 24"
+              color="primary"
+              width="20px"
+              xmlns="http://www.w3.org/2000/svg"
+              class="first__item__svg"
+            >
+              <path
+                d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+              ></path>
+            </svg>
+          </div>
+            
+          </div>
+        </div>
+        <div class="section__six__second__item">
+          <img class="section__six__second__item__image1" src="./assets/images/webp image/coin@2x.webp" alt="" />
+          <img class="section__six__second__item__image2" src="./assets/images/webp image/pancake-4.webp" alt="" />
+          <img class="section__six__second__item__image3" src="./assets/images/webp image/pancake-5.webp" alt="" />
+          <img class="section__six__second__item__image4" src="./assets/images/webp image/pancake-6.webp" alt="" />
+        </div>
+      </div>
+
+      <div class="second__container__section__six">
+        <div class="second__container__section__six__first__column">
+          <div
+            class="second__container__section__six__first__column__first-item"
+          >
+            <div class="second__container__section__six__text">
+              Circulating Supply
+            </div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                203,363,460
+              </span>
+            </div>
+          </div>
+
+          <div
+            class="second__container__section__six__first__column__second-item"
+          >
+            <div class="second__container__section__six__text">Market cap</div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                $290 million
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="second__container__section__six__second__column">
+          <div
+            class="second__container__section__six__second__column__first-item"
+          >
+            <div class="second__container__section__six__text">
+              Total Supply
+            </div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                386,970,057
+              </span>
+            </div>
+          </div>
+
+          <div
+            class="second__container__section__six__second__column__second-item"
+          >
+            <div class="second__container__section__six__text">
+              Burned to date
+            </div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                851,314,755
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="second__container__section__six__third__column">
+          <div
+            class="second__container__section__six__third__column__first-item"
+          >
+            <div class="second__container__section__six__text">Max Supply</div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                750,000,000
+              </span>
+            </div>
+          </div>
+
+          <div
+            class="second__container__section__six__third__column__second-item"
+          >
+            <div class="second__container__section__six__text">
+              Current emissions
+            </div>
+            <div class="second__container__section__six__text__subtitle">
+              <span
+                class="second__container__section__six__text__subtitle-span"
+              >
+                4,57/block
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="section-7"></div>
     <footer></footer>
   </body>
