Fixed carousel and added script

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     <div class="hero-section">
       <div class="hero-section__carousel-container">
         <div class="carousel">
-          <div class="carousel__protector carousel__item--selected">
+          <div class="carousel__protector carousel__item">
             <div class="carousel__bg-container">
               <div class="carousel__bg">
                 <img
@@ -979,15 +979,6 @@
                 alt="perpetual bunny"
               />
             </span>
-          </div>
-          <div class="carousel__nav">
-            <button class="carousel__button carousel__button--active"></button>
-            <button class="carousel__button"></button>
-            <button class="carousel__button"></button>
-            <button class="carousel__button"></button>
-            <button class="carousel__button"></button>
-            <button class="carousel__button"></button>
-            <button class="carousel__button"></button>
           </div>
         </div>
       </div>
@@ -2669,5 +2660,6 @@
         </div>
       </div>
     </footer>
+    <script src="./script/hero-section-carousel.js"></script>
   </body>
 </html>
