--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- NAVBAR -->
-    <nav class="navbar" id="navbar">
+    <nav class="navbar">
       <!-- NAVBAR LEFT START-->
       <div class="navbar-l">
         <div class="navbar-l__logo">
@@ -2663,5 +2663,6 @@
     <script src="./script/hero-section-carousel.js"></script>
     <script src="./script/crypto-switch.js"></script>
     <script src="./script/counter.js"></script>
+    <script src="./script/phishing-warning.js"></script>
   </body>
 </html>
