feat: navbar sticky.js, fixed mobile and phishing glitches

--- a/index.html
+++ b/index.html
@@ -2664,5 +2664,6 @@
     <script src="./script/crypto-switch.js"></script>
     <script src="./script/counter.js"></script>
     <script src="./script/phishing-warning.js"></script>
+    <script src="./script/navbar-sticky.js"></script>
   </body>
 </html>
