--- a/index.html
+++ b/index.html
@@ -477,54 +477,56 @@
 
           <div class="bnb-smart-chain">
             <div class="dropdown">
-              <a class="dropdownbtn__link" href="#" role="button">
-                <img
-                  src="./assets/images/wallets/web-chain.png"
-                  alt="cubo-portal"
-                />
-                <span class="sx-block">BNB</span>
-                <!--//TO REFACTOR -->
-                <span class="lg-block">Smart Chain</span
-                ><!--//TO REFACTOR -->
-                <svg
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  viewBox="0 0 24 24"
-                  color="text"
-                  width="24"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="sc-4ba21b47-0 IIbzK"
-                  height="24"
-                >
-                  <path
-                    d="M8.11997 9.29006L12 13.1701L15.88 9.29006C16.27 8.90006 16.9 8.90006 17.29 9.29006C17.68 9.68006 17.68 10.3101 17.29 10.7001L12.7 15.2901C12.31 15.6801 11.68 15.6801 11.29 15.2901L6.69997 10.7001C6.30997 10.3101 6.30997 9.68006 6.69997 9.29006C7.08997 8.91006 7.72997 8.90006 8.11997 9.29006Z"
-                  ></path>
-                </svg>
-              </a>
-              <div class="dropdown__content">
-                <span href="#">Select a Network</span>
-                <hr class="my-1" />
-                <a class="bnb" href="#"
-                  ><img
+              <div class="dropdown-bnb">
+                <a class="dropdownbtn__link" href="#" role="button">
+                  <img
                     src="./assets/images/wallets/web-chain.png"
-                    alt=""
-                    srcset=""
+                    alt="cubo-portal"
                   />
-                  BNB Smart Chain</a
-                >
-                <a class="ethereum" href="#"
-                  ><img
-                    src="./assets/images/icons/main/ethereum-hd.png"
-                    alt=""
-                    srcset=""
-                  />Ethereum</a
-                >
-                <a class="aptos" href="#"
-                  ><img
-                    src="./assets/images/wallets/aptos.png"
-                    alt=""
-                    srcset=""
-                  />Aptos</a
-                >
+                  <span class="sx-block">BNB</span>
+                  <!--//TO REFACTOR -->
+                  <span class="lg-block">BNB Smart Chain</span
+                  ><!--//TO REFACTOR -->
+                  <svg
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    viewBox="0 0 24 24"
+                    color="text"
+                    width="24"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="sc-4ba21b47-0 IIbzK"
+                    height="24"
+                  >
+                    <path
+                      d="M8.11997 9.29006L12 13.1701L15.88 9.29006C16.27 8.90006 16.9 8.90006 17.29 9.29006C17.68 9.68006 17.68 10.3101 17.29 10.7001L12.7 15.2901C12.31 15.6801 11.68 15.6801 11.29 15.2901L6.69997 10.7001C6.30997 10.3101 6.30997 9.68006 6.69997 9.29006C7.08997 8.91006 7.72997 8.90006 8.11997 9.29006Z"
+                    ></path>
+                  </svg>
+                </a>
+                <div class="dropdown__content">
+                  <span href="#">Select a Network</span>
+                  <hr class="my-1" />
+                  <a class="bnb" href="#"
+                    ><img
+                      src="./assets/images/wallets/web-chain.png"
+                      alt=""
+                      srcset=""
+                    />
+                    BNB Smart Chain</a
+                  >
+                  <a class="ethereum" href="#"
+                    ><img
+                      src="./assets/images/icons/main/ethereum-hd.png"
+                      alt=""
+                      srcset=""
+                    />Ethereum</a
+                  >
+                  <a class="aptos" href="#"
+                    ><img
+                      src="./assets/images/wallets/aptos.png"
+                      alt=""
+                      srcset=""
+                    />Aptos</a
+                  >
+                </div>
               </div>
             </div>
           </div>
