Added phising warning media query and touch events for hero-section-carousel

--- a/index.html
+++ b/index.html
@@ -2681,7 +2681,7 @@
     <script src="./script/hero-section-carousel.js"></script>
     <script src="./script/crypto-switch.js"></script>
     <script src="./script/counter.js"></script>
-    <script src="./script/phishing-warning.js"></script>
+    <script src="./script/phishing-warning.js" type="module"></script>
     <script src="./script/navbar-sticky.js"></script>
     <script src="./script/button-scroll.js"></script>
   </body>
