fix: fixed navbar nft and theme-switch.js

--- a/nft.html
+++ b/nft.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -254,7 +254,7 @@
                 color="secondary"
                 width="20px"
                 xmlns="http://www.w3.org/2000/svg"
-                class="sc-231a1e38-0 gYhxLk"
+                class="sc-231a1e38-0 gYhxLk icona"
               >
                 <path
                   d="M9.853.8a1 1 0 00-1.706 0L4.43 6.882a1 1 0 00.853 1.522h7.434a1 1 0 00.853-1.522L9.853.8zm4.647 9.604c-2.49 0-4.5 2.01-4.5 4.5s2.01 4.5 4.5 4.5 4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5zM0 16.904a2 2 0 002 2h4a2 2 0 002-2v-4a2 2 0 00-2-2H2a2 2 0 00-2 2v4z"
@@ -535,9 +535,13 @@
       </div>
     </nav>
     <div class="nav-bottom">
-      <a href="#" class="nav-bottom__item nav-bottom__item--active">Overview</a>
-      <a href="#" class="nav-bottom__item">Collections</a>
-      <a href="#" class="nav-bottom__item">Activity</a>
+      <div class="nav-bottom__items-container">
+        <a href="#" class="nav-bottom__item nav-bottom__item--active"
+          >Overview</a
+        >
+        <a href="#" class="nav-bottom__item">Collections</a>
+        <a href="#" class="nav-bottom__item">Activity</a>
+      </div>
     </div>
     <div class="nft-searchbox">
       <div class="nft-searchbox__content">
